2021-09-14  Sauro Menna  <smenna@users.sourceforge.net>
    * job.c - Fix problem with empty file
    
2021-09-03  Sauro Menna  <smenna@users.sourceforge.net>
    * job.c - Integrated command with only INCLUDE COND condition
    *         Example: gcsort INCLUDE COND=<condition>    USE <filein>   RECORD ...  GIVE <fileout> RECORD ...
    
2021-05-21  Sauro Menna  <smenna@users.sourceforge.net>
    * Fix problem in INCLUDE/OMIT condition
    * Fix script to compile parser/scanner
    * Exit routine E15 - E35
    * E15 - E35 routine for file fixed / variable length
    * New source COBOL for test exit routines E15 and E35
    * Test Case for Routine E15 and E35
    * New OPTION Y2PAST (YY) - Sliding, (YYYY) century fixed
    * FORMAT Date : Y2B,Y2C,Y2D,Y2P,Y2S,Y2T2,Y2T3,Y2T4,Y2T5,Y2T6,Y2T8,Y2U,Y2V,Y2X,Y2Y,Y2Z
    * New format FIELD=COPY  for E15/E35 routines
    * Test Case for Date format

2021-02-01  Sauro Menna  <smenna@users.sourceforge.net>
    * Check LIBCOB version (__LIBCOB_VERSION) for variables of cob_modules
    * Management of warning codes (New value 4 for Warning, like DFSORT)
    * Changes to improve performance
    * Review position of parser.y and scanner.l files
    * Modified MAKEFILE project
    * Updated test COBOL programs (tests/src) 
    
2021-01-14  Sauro Menna  <smenna@users.sourceforge.net>
    * Fix problems with Temporary Files
    * New module to verify result of sort (tests/src)
2021-01-08  Sauro Menna  <smenna@users.sourceforge.net>
    * New option OUTREC OVERLAY 
    * Fix problems in MinGW enviro nment
    * Review of test suite (folder tests) 
    * Fix problem in OUTREC
    * Changed Makefile to compile source and not generate parser/scanner
2020-12-28  Sauro Menna  <smenna@users.sourceforge.net>
	* New option INREC OVERLAY 
    * Fix problem in gcc compiler environment
    * Review of the configuration of the parser source
      New folder parser. Modified Makefile.
2020-10-15  Sauro Menna  <smenna@users.sourceforge.net>